more setup fixes
